--- a/source/various/66_钢琴古琴与快乐教育.md
+++ b/source/various/66_钢琴古琴与快乐教育.md
@@ -1,4 +1,4 @@
-# 大学生就是要受苦的
+# 钢琴、古琴与快乐教育
 2019-05-12
 
 前几天看到歌手龚琳娜发了一段微博，大意是古琴和钢琴不一样，音乐院校都是以钢琴为基础而忽略了古琴，而后者对学中国音乐才是最有帮助的。大意也许是应该重视古琴吧。
@@ -9,7 +9,7 @@
 
 或者，某些精英或成功人士在批评现代教育体系时，动不动就拿Bill Gates退学后却取得巨大成就来说事儿，或者说到某成功人士根本没有上过大学来说事儿，以此来表明上大学没那么重要，你要是真信了，你又没有盖茨那样的天赋和爹妈，你又没有好好读大学，你就完蛋了。
 
-再或者，对于某些推崇快乐教育的人士来说，天天宣传给学生减负（甚至都要给大学生减负），把快乐还给孩子们之类的，你要是真信了，你没有资源没有财富没有地位给你的孩子安排好前程，孩子又没受过“苦”教育，也许他/她的童年是快乐了吧，但是，你很可能就有的苦吃了。据说美国的精英阶层也不怎么待见减负这事儿，不过我也不知道，我又不是美国精英阶层，我是中国最底层，最底层就是要受苦的。
+再或者，对于某些推崇快乐教育的人士来说，天天宣传给学生减负（甚至都要给大学生减负），把快乐还给孩子们之类的，你要是真信了，你没有资源没有财富没有地位给你的孩子安排好前程，孩子又没受过“苦”教育，也许他/她的童年是快乐了吧，但是，你很可能就有的苦吃了。据说美国的精英阶层也不怎么待见减负这事儿，不过我也不知道，我又不是美国精英阶层，我是中国最底层，最底层总是要受苦的。
 
 
 
