--- a/source/macroeconomics/宏观经济学课程大纲.md
+++ b/source/macroeconomics/宏观经济学课程大纲.md
@@ -6,9 +6,9 @@
 
 ### 时间地点 Time and Location
 
-- Session I:IBC 22 级 12-13-14 国际金融班 XXXday (5-7) from XX:00 pm to YY:25 am/pm at ZZZ 书音;
+- Session I: IBC 英会2201  Tuesday (5-7) from 13:00 pm to 15:35 pm at 203 书音;
 
-- Session II:IBC 22 级 15-16-17 国际会计班 XXXday (5-7) from XX:00 pm to YY:25 am/pm at ZZZ 书音;
+- Session II: IBC 英会2202 Friday (2-4) from 8:55 am to 11:30 pm at 203 书音;
 
   
 
@@ -40,7 +40,7 @@ At the end of the course it is expected that students will be able to critically
 
 ### 学时安排 Course Format
 
-This class meets XXXday from XX:00-YY:25 and the whole course lasts 18 weeks. Students are required to attend to every session and exam, which are not optional.
+This class meets once every week and the whole course lasts 18 weeks. Students are required to attend to every session and exam, which are not optional.
 
 ### 课程要求 Course Requirements
 
