--- a/source/macroeconomics/宏观经济学课程大纲.md
+++ b/source/macroeconomics/宏观经济学课程大纲.md
@@ -12,10 +12,14 @@
 
   
 
-### 个人信息 Instructor: Feng Wencheng  (冯文成) 
+### 个人信息 Instructor: 
+
+- 冯文成 Feng Wencheng
 
 - Email: fengwencheng66@163.com
+
 - Office: 512 师言阁
+
 - Office hours: by appointment.
 
 
