--- a/source/macroeconomics/宏观经济学课程大纲.md
+++ b/source/macroeconomics/宏观经济学课程大纲.md
@@ -28,13 +28,13 @@
 
 Macroeconomics is the study of the economy as a whole, including growth in incomes, changes in prices, and the rate of unemployment. The objective of this course is to gain a formal understanding of macroeconomic topics such as what determines economic growth, what are the consequences of economic fluctuations, and what are the short run and long run determinants of aggregate income, wages rates, exchange rates, inflation rates, interest rates, and unemployment rates. In order to do this we will study the main models that have been developed by macroeconomists to explain the behavior of economies and to investigate the implications of those models for policy-making decisions.
 
-### 先修课程Prerequisites
+### 先修课程 Prerequisites
 
 I assume that you have a basic understanding of macro and microeconomic principles
 
 (Mankiw’s "*Ten Principles of Economics*"), basic algebra, and elementary calculus. 
 
-### 课程目标 **Course Objectives**
+### 课程目标 Course Objectives
 
 The goal of this course is to enable students to assess the macroeconomic environment in which a business operates.
 
@@ -56,14 +56,14 @@ Regular attendance is essential to successfully completing this course. As such,
 
 - The required textbook:
 
-1. 马克思主义理论研究和建设工程重点教材 《西方经济学:下册(宏观部分)》
-2. Mankiw, N. G. :  *Macroeconomics* (9th, 10th Edition) 英文原版，不用中译本
+Mankiw, N. G. :  *Macroeconomics* (9th, 10th Edition) (用英文版)
 
 - Reference, not required:
 
-  Olivier Blanchard (2017):  *Macroeconomics* (7th，8th Edition)
+1. 马克思主义理论研究和建设工程重点教材 《西方经济学:下册(宏观部分)》
+2. Olivier Blanchard (2017):  *Macroeconomics* (7th，8th Edition)
 
-The second book is, to date, the best-selling undergraduate macroeconomics textbook–for good reason in my opinion. While not perfect, Mankiw does an admirable job of explaining the key macroeconomic concepts and theories without overwhelming the reader with mathematics.
+The first book is, to date, the best-selling undergraduate macroeconomics textbook–for good reason in my opinion. While not perfect, Mankiw does an admirable job of explaining the key macroeconomic concepts and theories without overwhelming the reader with mathematics.
 
 ### 课程内容 CONTENTS
 
@@ -172,13 +172,5 @@ In Module 4, we will study the short run. The “short run”is defined as the t
 - The Basic Theory of Aggregate Supply
 - Inflation, Unemployment, and the Philips Curve
 
-### 特别声明
 
-《宏观经济学》课程不可避免地会涉及到经济与社会发展过程的历史脉络、政策得失，本 人课堂一切言论均本着如下原则所做判断
-
-* 不反党
-* 不反社会主义
-* 不信仰及传播任何宗教
-* 只涉学界观点，不涉意识形态
-* 观点不同可以争论，但不接受任何违反上述原则的指控。
 
