--- a/source/macroeconomics/宏观经济学课程大纲.md
+++ b/source/macroeconomics/宏观经济学课程大纲.md
@@ -60,8 +60,8 @@ Regular attendance is essential to successfully completing this course. As such,
 
 - Reference, not required:
 
-  1. 马克思主义理论研究和建设工程重点教材 《西方经济学:下册(宏观部分)》
-  2. Olivier Blanchard (2017):  *Macroeconomics* (7th，8th Edition)
+  * 马克思主义理论研究和建设工程重点教材 《西方经济学:下册(宏观部分)》
+  * Olivier Blanchard (2017):  *Macroeconomics* (7th，8th Edition)
 
 The Mankiw's book is, to date, the best-selling undergraduate macroeconomics textbook–for good reason in my opinion. While not perfect, Mankiw does an admirable job of explaining the key macroeconomic concepts and theories without overwhelming the reader with mathematics.
 
