--- a/source/macroeconomics/宏观经济学课程大纲.md
+++ b/source/macroeconomics/宏观经济学课程大纲.md
@@ -48,7 +48,7 @@ This class meets once every week and the whole course lasts 18 weeks. Students a
 
 ### 课程要求 Course Requirements
 
-Grads for this course will be based on participation and homeworks (30%) as well as a final exam (70%).
+Gradings for this course will be based on participation and homeworks (30%) as well as a final exam (70%).
 
 Regular attendance is essential to successfully completing this course. As such, I expect you to attend all of the lectures. If you need to miss a class, it is your responsibility to obtain all lecture notes and assignments from one of your classmates.
 
