--- a/source/growth/现代增长理论简史.md
+++ b/source/growth/现代增长理论简史.md
@@ -2,7 +2,7 @@
 
 冯文成整理自Barro《经济增长》导论章第4节
 
-古典主义经济学家如亚当 斯密（Adam Smith，1776）、托马斯 马尔萨斯（Thomas Malthus，1798）、大卫 李嘉图（David Ricardo，1817）、卡尔 马克思（Karl Marx，1867），以及晚近的弗兰克 拉姆齐（Frank Ramsey, 1928）、Allyn Young(1928)、Frank Knight（1944）和Joseph Schumpeter(1934)等人为现代经济增长理论提供了很多基本要素。这些思想包括：竞争行为和均衡动态的基本研究方法，收益递减的影响及其同物质资本和人力资本的积累的关系、人均收入和人口增长率之间的相互作用以及劳动分工的深化及产品和生产工艺的推陈出新为形式的技术进步的效果和激励技术进步的垄断力量的作用。
+古典主义经济学家如Adam Smith(1776）、Thomas Malthus(1798）、David Ricardo(1817）、Karl Marx(1867），以及晚近的Frank Ramsey(1928）、Allyn Young(1928)、Frank Knight（1944）和Joseph Schumpeter(1934)等人为现代经济增长理论提供了很多基本要素。这些思想包括：竞争行为和均衡动态的基本研究方法，收益递减的影响及其同物质资本和人力资本的积累的关系、人均收入和人口增长率之间的相互作用以及劳动分工的深化及产品和生产工艺的推陈出新为形式的技术进步的效果和激励技术进步的垄断力量的作用。
 
 我们的讨论主要从这些已有的基础理论开始。专注于20世纪50年代后期以来新古典主义传统中的贡献。我们使用新古典主义的研究方法和语言，并借助如总资本存量。总生产函数和代表性消费者的效用函数之类的概念。还会使用动态最优化和微分方程等现代数学方法。
 
